[package]
name = "abc169"
version = "0.1.0"
authors = ["Yuji Nagaoka <yuji.nagaoka@icloud.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
 proconio = { version = "0.3.6", features = ["derive"] }
 competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
[profile.release]
lto = true
panic = 'abort'
